--- a/.config/i3/config
+++ b/.config/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:xos4 Terminus 10px
+font pango:Monoid 12px
 
 # Colors
 client.focused #5fff00 #005f00 #5fff00 #5fff00 #000000
